// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppUninstallationSection should match a snapshot when theres no installations 1`] = `
<AppUninstallationSection
  clientId="SBOX-GWIT"
  installations={
    Object {
      "data": Array [],
    }
  }
  setPerformCompleteUninstall={[MockFunction]}
  setShowConfirmModal={[MockFunction]}
>
  <Section
    hasPadding={false}
  >
    <section
      className="section has-margin has-background"
      data-test=""
    >
      <FlexContainerBasic
        className="justify-between items-center mb-4"
      >
        <div
          className="container-flex justify-between items-center mb-4"
        >
          <H5>
            <h5
              className="title is-5"
              id=""
            >
              Current Installations
            </h5>
          </H5>
          <Button
            disabled={true}
            loading={false}
            onClick={[Function]}
            variant="primary"
          >
            <button
              className="button   is-primary "
              data-test=""
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              Uninstall
            </button>
          </Button>
        </div>
      </FlexContainerBasic>
      <p
        className="mb-4"
      >
        <p>
          This app is not currently installed. You can either install for your organisation or specific office groups in the section below.
        </p>
      </p>
    </section>
  </Section>
</AppUninstallationSection>
`;

exports[`AppUninstallationSection should match a snapshot, for a group installation 1`] = `
<AppUninstallationSection
  clientId="SBOX-TEST"
  installations={
    Object {
      "data": Array [
        Object {
          "client": "SBOX-GWIT",
        },
      ],
    }
  }
  setPerformCompleteUninstall={[MockFunction]}
  setShowConfirmModal={[MockFunction]}
>
  <Section
    hasPadding={false}
  >
    <section
      className="section has-margin has-background"
      data-test=""
    >
      <FlexContainerBasic
        className="justify-between items-center mb-4"
      >
        <div
          className="container-flex justify-between items-center mb-4"
        >
          <H5>
            <h5
              className="title is-5"
              id=""
            >
              Current Installations
            </h5>
          </H5>
          <Button
            disabled={false}
            loading={false}
            onClick={[Function]}
            variant="primary"
          >
            <button
              className="button   is-primary "
              data-test=""
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Uninstall
            </button>
          </Button>
        </div>
      </FlexContainerBasic>
      <p
        className="mb-4"
      >
        <p>
          This app is currently installed for 
          1 group
          . By clicking this button you will uninstall for all users and offices.
        </p>
      </p>
    </section>
  </Section>
</AppUninstallationSection>
`;

exports[`AppUninstallationSection should match a snapshot, for an all orgs installation 1`] = `
<AppUninstallationSection
  clientId="SBOX-GWIT"
  installations={
    Object {
      "data": Array [
        Object {
          "client": "SBOX",
        },
      ],
    }
  }
  setPerformCompleteUninstall={[MockFunction]}
  setShowConfirmModal={[MockFunction]}
>
  <Section
    hasPadding={false}
  >
    <section
      className="section has-margin has-background"
      data-test=""
    >
      <FlexContainerBasic
        className="justify-between items-center mb-4"
      >
        <div
          className="container-flex justify-between items-center mb-4"
        >
          <H5>
            <h5
              className="title is-5"
              id=""
            >
              Current Installations
            </h5>
          </H5>
          <Button
            disabled={false}
            loading={false}
            onClick={[Function]}
            variant="primary"
          >
            <button
              className="button   is-primary "
              data-test=""
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Uninstall
            </button>
          </Button>
        </div>
      </FlexContainerBasic>
      <p
        className="mb-4"
      >
        <p>
          This app is currently installed for 
          your whole orgainsation
          . By clicking this button you will uninstall for all users and offices.
        </p>
      </p>
    </section>
  </Section>
</AppUninstallationSection>
`;

exports[`AppUninstallationSection should match a snapshot, for multiple group installations 1`] = `
<AppUninstallationSection
  clientId="SBOX-TEST"
  installations={
    Object {
      "data": Array [
        Object {
          "client": "SBOX-GWIT",
        },
        Object {
          "client": "SBOX-ABCT",
        },
      ],
    }
  }
  setPerformCompleteUninstall={[MockFunction]}
  setShowConfirmModal={[MockFunction]}
>
  <Section
    hasPadding={false}
  >
    <section
      className="section has-margin has-background"
      data-test=""
    >
      <FlexContainerBasic
        className="justify-between items-center mb-4"
      >
        <div
          className="container-flex justify-between items-center mb-4"
        >
          <H5>
            <h5
              className="title is-5"
              id=""
            >
              Current Installations
            </h5>
          </H5>
          <Button
            disabled={false}
            loading={false}
            onClick={[Function]}
            variant="primary"
          >
            <button
              className="button   is-primary "
              data-test=""
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Uninstall
            </button>
          </Button>
        </div>
      </FlexContainerBasic>
      <p
        className="mb-4"
      >
        <p>
          This app is currently installed for 
          2 groups
          . By clicking this button you will uninstall for all users and offices.
        </p>
      </p>
    </section>
  </Section>
</AppUninstallationSection>
`;
